
=== Python module ===

=== Miscellaneous ===
 * Add HypothesisTest::LikelihoodRatioTest for nested model selection
 * Add VisualTest::DrawPPplot
 * Add VisualTest.Draw(Upper|Lower)(Tail|Extremal)DependenceFunction methods to plot dependence coefficients

=== Bug fixes ===
 * #2250 (HSIC Target sensitivity bad filtering)
 * #2252 (The examples of calibration are difficult to understand)

== 1.20 release (2022-11-08) == #release-1.20

=== Library ===

==== New classes ====
 * IndependentCopulaFactory
 * FieldToPointFunctionalChaosAlgorithm (openturns.experimental)
 * FieldFunctionalChaosResult (openturns.experimental)
 * FieldFunctionalChaosSobolIndices (openturns.experimental)
 * CorrelationAnalysis
 * UserDefinedMetropolisHastings (openturns.experimental)
 * QuantileMatchingFactory
 * UniformMuSigma

==== API changes ====
 * Removed coupling_tools.execute get_stderr,get_stdout arguments
 * Removed deprecated Nlopt|Ceres|Bonmin|CMinpack|Ipopt|TBB|HMatrixFactory::IsAvailable methods
 * Deprecated SequentialStrategy
 * Deprecated TensorApproximationAlgorithm, TensorApproximationResult, CanonicalTensorEvaluation, CanonicalTensorGradient
 * Deprecated FunctionalChaosSobolIndices.getSobolGrouped(Total)Index(int)
 * Deprecated static CorrelationAnalysis::PearsonCorrelation|SpearmanCorrelation|PCC|PRCC, use the methods of the new CorrelationAnalysis class instead.
 * Removed static CorrelationAnalysis::SRC|SRRC due to a bug: #1753.
 * Deprecated Distribution::getStandardMoment
 * Inverted ctors arguments order in LinearModelAlgorithm & LinearModelStepwiseAlgorithm : first sample, then basis
 * Deprecated oldest LinearModelAlgorithm(X, basis, Y) and LinearModelStepwiseAlgorithm(X, basis, Y,...) ctors
 * Deprecated FunctionalChaos(Function, ...) ctors
 * Deprecated MetaModelResult(Function, Function, ...) ctor
 * Deprecated FunctionalChaosResult.getComposedModel, MetaModelResult.getModel
 * Deprecated FunctionalChaosResult(Function, ...) ctor